Last fix for the gallery spacing.. Can't get words to wrap

--- a/css/style.css
+++ b/css/style.css
@@ -901,6 +901,9 @@ body {
         .section-testimonial .grid .grid__item--2-cols {
           grid-column: span 1; } }
 
+.section-gallery {
+  overflow-x: hidden; }
+
 .section-about {
   width: 100%;
   margin: 0 auto;
