--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -66,3 +66,7 @@
     }
   }
 }
+
+.section-gallery {
+  overflow-x: hidden;
+}
